fix: improve header link spacing

--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -55,7 +55,7 @@
 }
 
 .header__nav-item {
-  padding: $space-3;
+  padding: $space-3 $space-4;
 }
 
 .header__nav-menu a {
